# fastrpc

./: .clang-tidy  .gitignore  .travis.yml  Doxyfile  Doxyfile.in  Makefile  Makefile.am  README.md  bootstrap.sh  configure.ac  configure.in  fastrpcmodule.cc  fastrpcmodule.h  frpcpythonhelper.h  libfastrpc.pc.in  libfastrpc6.pc.in  libfastrpc8.pc.in  meson.build  meson.options  pyerrors.cc  pyobjectwrapper.h  pythonbuilder.cc  pythonbuilder.h  pythonfeeder.cc  pythonfeeder.h  pythonserver.cc  setup.py  version
debian/: changelog  control  fastrpc.control  fastrpc.version  install  libfastrpc-dev.control  libfastrpc-dev.control.woody  libfastrpc-dev.install  libfastrpc.control  libfastrpc.control.sarge  libfastrpc.control.woody  libfastrpc.postinst  libfastrpc.postinst.sarge  libfastrpc.postinst.woody  libfastrpc.shlibs.woody  libfastrpc4-dev.install  libfastrpc4.install  libfastrpc5.symbols  libfastrpc6-dev.install  libfastrpc7.symbols  make.sh  rules
example/: Makefile  client_example.cc  client_example.py  readme.txt  server_example.cc
javascript/: fastrpc.js  fastrpc.mjs
netcat/: Makefile  fastrpc-netcat  fastrpc-netcat.1  fastrpc-netcat3
netcat/debian/: control  makedeb.sh
python/: .gitignore  Doxyfile  MANIFEST.in  Makefile  README  README.md  Readme.md  api_doc.doxygen  bootstrap.sh  fastrpc.py  fastrpc_version_info.py.in  fastrpcmodule.cc  fastrpcmodule.h  pyerrors.cc  pyobjectwrapper.h  pythonbuilder.cc  pythonbuilder.h  pythoncompat.h  pythonfeeder.cc  pythonfeeder.h  pythonserver.cc  setup.py
python/debian/: changelog  control  rules
python/example/: client.conf  client_example.py  client_example2.py  client_example3.py  server.py  server_aiohttp_example.py  server_example.py  server_flask_example.py  server_tornado_example.py
python/fastrpc/handler/: aiohttp.py  flask.py  tornado.py
python/test/: bool.py  datetime.py  dumptree.py  exceptions.py  server.py  serverproxytest.py  test_datetime.py  test_dumps.py
solaris/: libfastrpc-dev.pkginfo  libfastrpc.pkginfo  libfastrpc4-amd64.files  libfastrpc4-amd64.pkginfo  libfastrpc4-dev-amd64.configfl  libfastrpc4-dev-amd64.files  libfastrpc4-dev-amd64.pkginfo  libfastrpc4-dev-i386.files  libfastrpc4-dev-i386.pkginfo  libfastrpc4-i386.configfl  libfastrpc4-i386.files  libfastrpc4-i386.pkginfo  make.sh  szn-libfastrpc5-amd64.files  szn-libfastrpc5-amd64.pkginfo  szn-libfastrpc5-dev-amd64.configfl  szn-libfastrpc5-dev-amd64.files  szn-libfastrpc5-dev-amd64.pkginfo
src/: .gitignore  Makefile.am  frpc.cc  frpc.h  frpcarray.cc  frpcarray.h  frpcb64marshaller.h  frpcb64unmarshaller.cc  frpcb64unmarshaller.h  frpcb64writer.cc  frpcb64writer.h  frpcbase64.cc  frpcbase64.h  frpcbinary.cc  frpcbinary.h  frpcbinaryref.h  frpcbinmarshaller.cc  frpcbinmarshaller.h  frpcbinunmarshaller-extras.h  frpcbinunmarshaller.cc  frpcbinunmarshaller.h  frpcbool.cc  frpcbool.h  frpccompare.cc  frpccompare.h  frpcconfig.cc  frpcconfig.h  frpcconnector.cc  frpcconnector.h  frpcconverters.h  frpcdatabuilder.cc  frpcdatabuilder.h  frpcdatetime.cc  frpcdatetime.h  frpcdefaultmethod.h  frpcdouble.cc  frpcdouble.h  frpcencodingerror.cc  frpcencodingerror.h  frpcerror.cc  (+74 more)
src/Win32/: FRPC.sln  FRPC.vcproj  WinsockError.cpp  stdafx.cpp  stdafx.h
src/Win32/frpcdll/: Resource.h  frpcdll.cpp  frpcdll.def  frpcdll.h  frpcdll.rc  frpcdll.vcproj  stdafx.cpp  stdafx.h
src/Win32/frpcdll/res/: frpcdll.rc2
src/error/: frpcerror.h  frpcfault.h  frpchttperror.cc  frpcindexerror.cc  frpclenerror.cc  frpcprotocolerror.cc  frpcprotocolerror.h  frpcstreamerror.h  frpctypeerror.cc
src/http/: frpchttpclient.cc  frpchttpio.cc  frpchttpio.h
src/marshaller/: frpcb64unmarshaller.cc  frpcb64unmarshaller.h  frpcbinmarshaller.cc  frpcbinmarshaller.h  frpcbinunmarshaller.cc  frpcjsonmarshaller.cc  frpcunmarshaller.cc  frpcurlunmarshaller.h  frpcxmlmarshaller.cc  frpcxmlunmarshaller.cc
src/value/: frpcarray.h  frpcbool.cc  frpcbool.h  frpcdouble.h  frpcint.h  frpcpool.h  frpcstruct.cc  frpcstruct.h
src/writer/: frpcserver.cc
test/: base64.cc  frpc.tests  marshallers.cc  marshallers.test  protocol.cc  runner.mjs
typescript/: README.md  fastrpc.ts  package-lock.json  package.json  tsc.sh
