#
# Fast RPC -RPC protocol support binary and XML format.
# Copyright (C) 2004  Seznam.cz, a.s.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# Seznam.cz, a.s.
# Naskove 1, Praha 5, 15000, Czech Republic
# http://www.seznam.cz, mailto:fastrpc@firma.seznam.cz
#
#
# $Id: Makefile.am,v 1.4 2011-01-20 13:07:15 burlog Exp $
#
# DESCRIPTION
# A makefile template for project Fast RPC.
#
# AUTHORS
# Miroslav Talasek <miroslav.talasek@firma.seznam.cz>
#
# HISTORY
#       2005-02-14  (miro)
#                   Created.
#

SUBDIRS = src

EXTRA_DIST = debian/libfastrpc.control debian/libfastrpc-dev.control \
	     debian/libfastrpc.postinst debian/make.sh

pkgconfigdir=@libdir@/pkgconfig
pkgconfig_DATA=libfastrpc8.pc
