#
# Fast RPC RPC library suports XML and binary format.
# Copyright (C) 2005-7  Seznam.cz, a.s.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# Seznam.cz, a.s.
# Radlicka 2, Praha 5, 15000, Czech Republic
# http://www.seznam.cz, mailto:fastrpc@firma.seznam.cz
#
#
# $Id: configure.in,v 1.52 2011-02-25 09:31:03 volca Exp $
#
# DESCRIPTION
# configure template for fastrpc.
#
# AUTHORS
# Miroslav Talasek <miroslav.talasek@firma.seznam.cz>
#
# HISTORY
# 2004-02-14  (miro)
#             Created.
#


# initialize autoconf
AC_INIT(fastrpc, 4.1.0, fastrpc@firma.seznam.cz)
# initialize automake(use AC_INIT's arguments)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

# tell autoconf where to find sources
AC_CONFIG_SRCDIR([src/frpcvalue.cc])

AC_PREREQ(2.50)

# Set the flags for solaris to enable 64bit compilation
CPPFLAGS="-m64"
CXXFLAGS="-m64"
CFLAGS="-m64"

# check for C compiled
AC_PROG_CC

# check for C++ compiler
AC_PROG_CXX

# check for std C headers
AC_HEADER_STDC

# check for libtool
AC_PROG_LIBTOOL

AC_LANG_CPLUSPLUS
# check libxml2
AC_CHECK_LIB(xml2,xmlParseChunk, ,
             AC_MSG_ERROR(Cannot find xml2 library!))

#AC_HAVE_LIBRARY(xml2,[],[echo "Error libxml not found" ;exit -1])

XML2_CFLAGS=`xml2-config --cflags`
XML2_LIBS=`xml2-config --libs`

AC_SUBST(XML2_CFLAGS)
AC_SUBST(XML2_LIBS)


dnl ------------------------------------------------------------------------
# system dependant part

# search for socket related libraries
AC_SEARCH_LIBS(getnetbyname, socket, , )
AC_SEARCH_LIBS(hstrerror, resolv, , )
AC_SEARCH_LIBS(inet_ntoa, nsl, , )

dnl ------------------------------------------------------------------------

# This version number needs to be changed in several different ways for each
# release. Please read the libtool documentation (info libtool 'Updating
# version info') before touching this.
FASTRPC_MAJOR=4
FASTRPC_MINOR=1
VERSION_INFO="-version-info 6:0:2"

AC_ARG_ENABLE(optimization,[  --enable-optimization compile optimized without debug logging],[
    case "${enableval}" in
        no)
            AC_MSG_NOTICE([disabling optimization.])
            CPPFLAGS="${CPPFLAGS} -DDEBUG=1"
        ;;
        yes)
            AC_MSG_NOTICE([enabling optimization.])
            CXXEXTRAFLAGS="${CXXEXTRAFLAGS} -O2"
            CPPFLAGS="${CPPFLAGS} -UDEBUG"
        ;;
        *)
            AC_MSG_ERROR([Say yes or no to --enable-optimization.])
        ;;
    esac
], [
   CPPFLAGS="${CPPFLAGS} -DDEBUG=1"
])

AC_SUBST(FASTRPC_MAJOR)
AC_SUBST(FASTRPC_MINOR)
AC_SUBST(VERSION_INFO)
AC_SUBST(CXXEXTRAFLAGS)

# generate Makefile
AC_CONFIG_FILES([src/frpcversion.h
    Makefile
    src/Makefile
    version
    libfastrpc.pc])

AC_OUTPUT()
